Channel names were unreadable in "Directory" view.

--- a/docs/RocketChat/CSS/RocketChat-DarkTheme.css
+++ b/docs/RocketChat/CSS/RocketChat-DarkTheme.css
@@ -41,6 +41,10 @@ input, select, textarea {
 	background-color: #202225;
 }
 
+.rc-table-title {
+	color: #dcddde;
+}
+
 .message .title .is-bot, .message .title .role-tag {
 	background: #40444b;
 }
