Update dark theme css
- Hovering over members gave a light highlight and made them unreadable, now fixed.  Also the default highlight seems to end at the pixel border of the avatar, while having 8px of padding on the top and bottom. So I gave it 8 pixels of padding on the left as well to make the highlight look better.
-  The spacers for new days were bright red since I initially thought they'd go away. Now made them much less stingy to the eye and nice and dark.
- Made the `x` to close pop-out windows red so they look more interactive, rather than just a letter in the corner of the window.
- Fixed inconsistent spacing and tabbing in the file.

--- a/docs/RocketChat/CSS/RocketChat-DarkTheme.css
+++ b/docs/RocketChat/CSS/RocketChat-DarkTheme.css
@@ -7,11 +7,14 @@
 }
 
 .message.new-day::before {
-	background-color: #f04747;
+    background-color: #2f3136;
+    border: solid 1px;
+    border-color: #202225;
+    border-radius: 8px;
 }
 
 .message.new-day::after {
-	border-color: #f04747;
+    border-color: #202225;
 }
 
 .first-unread .body:after {
@@ -96,6 +99,10 @@ input, select, textarea {
 }
 
 .rc-modal__close {
+	color: #f04747;
+}
+
+.contextual-bar__header-close {
 	color: #f04747;
 }
 
@@ -229,25 +236,33 @@ option {
 }
 
 .rc-input__title {
-    color: #dcddde;
+	color: #dcddde;
 }
 
 .rc-switch__text {
-    color: #dcddde;
+	color: #dcddde;
 }
 
 .rc-tags {
-    border-color: #4f545c;
-    border-radius: 8px;
-    color: #dcddde;
+	border-color: #4f545c;
+	border-radius: 8px;
+	color: #dcddde;
 }
 
 .rc-table tbody tr:not(.table-no-click):not(.table-no-pointer):hover {
-    background-color: #1f2329;
+	background-color: #1f2329;
 }
 
 .tabs {
-    border-bottom: 2px solid hsla(0,0%,85%,.4);
+	border-bottom: 2px solid hsla(0,0%,85%,.4);
+}
+.rc-member-list__user.active, .rc-member-list__user {
+	padding: 8px 0;
+	padding-left: 8px;
+}
+
+.rc-member-list__user.active, .rc-member-list__user:hover {
+	background-color: #1f2329;
 }
 
 .hljs {
