Updated to contain the full css.
This also contains all the existing CSS that comes with the site.  
This way we can just load this CSS file as a whole and not have to worry about missing code.

--- a/docs/RocketChat/CSS/RocketChat-DarkTheme.css
+++ b/docs/RocketChat/CSS/RocketChat-DarkTheme.css
@@ -1,3 +1,773 @@
+:root {
+	--legacy-default-action-color: #cecece;
+	--legacy-default-action-contrast: #444;
+	--legacy-primary-background-contrast: #fff;
+	--legacy-primary-action-contrast: #fff;
+	--legacy-secondary-background-contrast: #444;
+	--legacy-secondary-action-contrast: #444;
+	--legacy-selection-background: #89defe;
+	--legacy-success-background: #fff;
+	--legacy-success-border: #e6ffe6;
+	--legacy-error-background: #f6cbd0;
+	--legacy-error-border: #eb8a95;
+	--legacy-error-contrast: #fff;
+	--legacy-pending-background: #fffdf9;
+	--legacy-pending-border: #fee4ad;
+	--legacy-transparent-darkest: rgba(17, 12, 12, 0.5);
+	--legacy-transparent-darker: rgba(0, 0, 0, 0.15);
+	--legacy-transparent-dark: rgba(15, 34, 0, 0.05);
+	--legacy-transparent-light: rgba(255, 255, 255, 0.1);
+	--legacy-transparent-lighter: rgba(255, 255, 255, 0.3);
+	--legacy-transparent-lightest: rgba(255, 255, 255, 0.6)
+}
+
+.content-background-color {
+	background-color: #fff
+}
+
+.color-content-background-color {
+	color: #fff
+}
+
+.primary-background-color {
+	background-color: #04436a
+}
+
+.global-font-family {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Meiryo UI', Arial, sans-serif
+}
+
+.color-primary-font-color {
+	color: #444
+}
+
+.color-primary-action-color {
+	color: #1d74f5
+}
+
+.background-primary-action-color {
+	background-color: #1d74f5
+}
+
+.secondary-background-color {
+	background-color: #f4f4f4
+}
+
+.border-secondary-background-color {
+	border-color: #f4f4f4
+}
+
+.secondary-font-color {
+	color: #a0a0a0
+}
+
+.border-component-color {
+	border-color: #f2f3f5
+}
+
+.background-component-color {
+	background-color: #f2f3f5
+}
+
+.color-component-color {
+	color: #f2f3f5
+}
+
+.success-color {
+	color: #4dff4d
+}
+
+.pending-color {
+	color: #fcb316
+}
+
+.pending-background {
+	background-color: #fffdf9
+}
+
+.pending-border {
+	border-color: #fee4ad
+}
+
+.error-color {
+	color: #bc2031
+}
+
+.background-error-color {
+	background-color: #bc2031
+}
+
+.color-info-font-color {
+	color: #a0a0a0
+}
+
+.background-info-font-color {
+	background-color: #a0a0a0
+}
+
+.background-attention-color {
+	background-color: #9c27b0
+}
+
+.tertiary-background-color {
+	background-color: #f2f3f5
+}
+
+.border-tertiary-background-color {
+	border-color: #f2f3f5
+}
+
+.color-tertiary-font-color {
+	color: rgba(255, 255, 255, 0.6)
+}
+
+.error-background {
+	background-color: #f6cbd0
+}
+
+.error-border {
+	border-color: #eb8a95
+}
+
+.color-error-contrast {
+	color: #fff
+}
+
+.background-transparent-darkest {
+	background-color: rgba(17, 12, 12, 0.5)
+}
+
+.background-transparent-darker {
+	background-color: rgba(0, 0, 0, 0.15)
+}
+
+.background-transparent-darker-hover:hover {
+	background-color: rgba(0, 0, 0, 0.15)
+}
+
+.background-transparent-darker-before::before {
+	background-color: rgba(0, 0, 0, 0.15)
+}
+
+.background-transparent-dark {
+	background-color: rgba(15, 34, 0, 0.05)
+}
+
+.background-transparent-dark-hover:hover {
+	background-color: rgba(15, 34, 0, 0.05)
+}
+
+.border-transparent-dark {
+	border-color: rgba(15, 34, 0, 0.05)
+}
+
+.background-transparent-light {
+	background-color: rgba(255, 255, 255, 0.1)
+}
+
+.border-transparent-lighter {
+	border-color: rgba(255, 255, 255, 0.3)
+}
+
+.background-transparent-lightest {
+	background-color: rgba(255, 255, 255, 0.6)
+}
+
+.color-primary-action-contrast {
+	color: #fff
+}
+
+* {
+	-webkit-overflow-scrolling: touch
+}
+
+*::-webkit-scrollbar {
+	height: 8px;
+	width: 8px;
+	background: rgba(15, 34, 0, 0.05)
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: rgba(0, 0, 0, 0.15);
+	-webkit-border-radius: 50px
+}
+
+*::-webkit-scrollbar-corner {
+	background-color: rgba(15, 34, 0, 0.05)
+}
+
+.filter-item:hover {
+	border-color: #a0a0a0
+}
+
+.filter-item.active {
+	border-color: #04436a
+}
+
+.burger i {
+	background-color: #444
+}
+
+input,
+select,
+textarea {
+	color: #444;
+	background-color: transparent;
+	border-color: #e6e6e6;
+	border-style: solid
+}
+
+input::-webkit-input-placeholder,
+select::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+	color: #737373
+}
+
+input::-moz-placeholder,
+select::-moz-placeholder,
+textarea::-moz-placeholder {
+	color: #737373
+}
+
+input:-ms-input-placeholder,
+select:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+	color: #737373
+}
+
+input::-ms-input-placeholder,
+select::-ms-input-placeholder,
+textarea::-ms-input-placeholder {
+	color: #737373
+}
+
+input::placeholder,
+select::placeholder,
+textarea::placeholder {
+	color: #737373
+}
+
+input[disabled],
+select[disabled],
+textarea[disabled] {
+	background-color: #e6e6e6
+}
+
+.disabled label,
+[disabled] label {
+	color: #737373
+}
+
+.-autocomplete-container {
+	background-color: #e6e6e6
+}
+
+.-autocomplete-item.selected {
+	background-color: #ccc
+}
+
+.rc-old input[type="button"],
+.rc-old input[type="submit"] {
+	color: #444;
+	background: #e6e6e6;
+	border-color: #e6e6e6
+}
+
+.toolbar-search__input:focus {
+	border-color: rgba(255, 255, 255, 0.5)
+}
+
+.toolbar-search__input::-webkit-input-placeholder {
+	color: rgba(255, 255, 255, 0.3)
+}
+
+.toolbar-search__input::-moz-placeholder {
+	color: rgba(255, 255, 255, 0.3)
+}
+
+.toolbar-search__input:-ms-input-placeholder {
+	color: rgba(255, 255, 255, 0.3)
+}
+
+.toolbar-search__input::-ms-input-placeholder {
+	color: rgba(255, 255, 255, 0.3)
+}
+
+.toolbar-search__input::placeholder {
+	color: rgba(255, 255, 255, 0.3)
+}
+
+.toolbar-search__buttons i:hover {
+	color: rgba(255, 255, 255, 0.5)
+}
+
+.input-line.setting-changed>label {
+	color: #02acec
+}
+
+input:-webkit-autofill {
+	color: #444 !important;
+	background-color: transparent !important
+}
+
+.input.radio label::before {
+	border-color: #919191;
+	background-color: #fff
+}
+
+.input.radio label::after {
+	background-color: #444
+}
+
+.input.checkbox.toggle input:checked+label::before {
+	background-color: #444
+}
+
+.input.checkbox.toggle input:disabled+label::before {
+	background-color: #c3c3c3 !important
+}
+
+.input.checkbox.toggle label::before {
+	background-color: #919191
+}
+
+.input.checkbox.toggle label::after {
+	background-color: #fff
+}
+
+.input.checkbox.toggle label:hover::before {
+	background-color: #777
+}
+
+.message a i,
+.flex-tab a i,
+.message a[class^="icon-"],
+.flex-tab a[class^="icon-"] {
+	color: #444
+}
+
+.message a i:hover,
+.flex-tab a i:hover,
+.message a[class^="icon-"]:hover,
+.flex-tab a[class^="icon-"]:hover {
+	color: #2b2b2b
+}
+
+.error {
+	border-color: #bc2031
+}
+
+.page-list a:not(.rc-button),
+.page-settings a:not(.rc-button) {
+	color: #444
+}
+
+.page-list a:not(.rc-button):hover,
+.page-settings a:not(.rc-button):hover {
+	color: #1d74f5
+}
+
+.admin-table-row {
+	background-color: rgba(255, 255, 255, 0.1)
+}
+
+.admin-table-row:nth-of-type(even) {
+	background-color: rgba(255, 255, 255, 0.6)
+}
+
+.new-logs {
+	background: #fff
+}
+
+.avatar-suggestion-item .question-mark::before {
+	color: #a0a0a0
+}
+
+.full-page a,
+.page-loading a {
+	color: rgba(255, 255, 255, 0.6)
+}
+
+.full-page a:hover,
+.page-loading a:hover {
+	color: #fff
+}
+
+#login-card .input-text input:-webkit-autofill {
+	-webkit-box-shadow: 0 0 0 20px #fff inset
+}
+
+.toggle-favorite {
+	color: #f2f3f5
+}
+
+.upload-progress-progress {
+	background-color: #fff
+}
+
+.messages-container .footer {
+	background: #fff
+}
+
+.message-form .message-buttons {
+	color: #848484;
+	background-color: #f4f4f4
+}
+
+.message-form .message-buttons:hover {
+	color: #4f4f4f;
+	background-color: #f8f8f8
+}
+
+.message-form .message-buttons:hover {
+	background-color: #fdfdfd
+}
+
+.message-form .message-form-text.editing {
+	background-color: #fff5df
+}
+
+.message.editing {
+	background-color: #fff5df
+}
+
+.rc-old .popup-item.selected {
+	color: #fff;
+	background-color: #1d74f5
+}
+
+.messages-box.selectable .selected {
+	background-color: #89defe
+}
+
+.message.new-day::before {
+	background-color: #fff
+}
+
+.message.new-day::after {
+	border-color: #f2f3f5
+}
+
+.message .options-menu {
+	color: #656565
+}
+
+.message .options-menu ul li:hover {
+	background-color: #f2f3f5
+}
+
+.message a {
+	color: #1d74f5
+}
+
+.message a:hover {
+	color: #095cd6
+}
+
+.message .highlight-text {
+	background-color: #89defe
+}
+
+.sidebar-item__last-message a:not(.mention-link) {
+	color: #1d74f5
+}
+
+.sidebar-item__last-message a:not(.mention-link):hover {
+	color: #095cd6
+}
+
+.message-popup.search-results-list {
+	background-color: #044b76
+}
+
+.message-popup.search-results-list .popup-item.selected {
+	background-color: rgba(0, 0, 0, 0.15)
+}
+
+.flex-tab .channel-settings .buttons .button {
+	color: #848484;
+	background-color: #f4f4f4
+}
+
+.flex-tab .channel-settings .buttons .button:hover {
+	color: #4f4f4f;
+	background-color: #f8f8f8
+}
+
+.flex-tab .channel-settings .input.checkbox.toggle input:checked+label::before {
+	background-color: #04436a
+}
+
+.flex-tab-bar .tab-button:hover {
+	background-color: #f4f4f4
+}
+
+.flex-tab-bar .tab-button.active {
+	background-color: #f4f4f4;
+	border-right-color: #02acec
+}
+
+.flex-tab-bar .tab-button.attention {
+	-webkit-animation-duration: 1000ms;
+	animation-duration: 1000ms;
+	-webkit-animation-name: blink;
+	animation-name: blink;
+	-webkit-animation-iteration-count: infinite;
+	animation-iteration-count: infinite;
+	-webkit-animation-direction: alternate;
+	animation-direction: alternate
+}
+
+.flex-tab-bar .counter {
+	background: #a0a0a0;
+	color: white
+}
+
+i.status-online {
+	color: #4dff4d
+}
+
+.status-bg-online {
+	background-color: #4dff4d
+}
+
+.account-box .status-online .thumb::after,
+.account-box .status.online::after,
+.popup-user-status-online,
+.status-online::after,
+.user-image.status-online .avatar::after {
+	background-color: #4dff4d;
+	border-color: #1aff1a
+}
+
+.account-box .status-offline .thumb::after,
+.account-box .status.offline::after {
+	background-color: rgba(255, 255, 255, 0.3)
+}
+
+i.status-away {
+	color: #fcb316
+}
+
+.status-bg-away {
+	background-color: #fcb316
+}
+
+.account-box .status-away .thumb::after,
+.account-box .status.away::after,
+.popup-user-status-away,
+.status-away::after,
+.status-pending::after,
+.user-image.status-away .avatar::after {
+	background-color: #fcb316;
+	border-color: #dc9703
+}
+
+i.status-busy {
+	color: #bc2031
+}
+
+.status-bg-busy {
+	background-color: #bc2031
+}
+
+.account-box .status-busy .thumb::after,
+.account-box .status.busy::after,
+.popup-user-status-busy,
+.status-busy::after,
+.user-image.status-busy .avatar::after {
+	background-color: #bc2031;
+	border-color: #901926
+}
+
+i.status-offline {
+	color: rgba(0, 0, 0, 0.15)
+}
+
+.status-bg-offline {
+	background-color: rgba(0, 0, 0, 0.15)
+}
+
+.popup-user-status-offline,
+.status-offline::after,
+.user-image.status-offline .avatar::after {
+	background-color: rgba(0, 0, 0, 0.15);
+	border-color: rgba(0, 0, 0, 0.15)
+}
+
+.actionLinks li .action-link {
+	color: #fff;
+	background-color: #1d74f5
+}
+
+.actionLinks li .action-link:hover {
+	color: #fff;
+	background-color: #114693
+}
+
+.button {
+	color: #444;
+	background-color: #cecece
+}
+
+.button:hover {
+	color: #292929;
+	background-color: #e1e1e1
+}
+
+.button.primary {
+	color: #fff;
+	background-color: #1d74f5
+}
+
+.button.primary:hover {
+	color: #fff;
+	background-color: #114693
+}
+
+.button.primary[disabled] {
+	background-color: #c4d2e7
+}
+
+.button.secondary {
+	color: #444;
+	background-color: #ddd
+}
+
+.button.secondary:hover {
+	color: #292929;
+	background-color: #ebebeb
+}
+
+.button.secondary[disabled] {
+	background-color: #fff
+}
+
+.button.tertiary {
+	color: #fff;
+	background-color: #02acec
+}
+
+.button.tertiary:hover {
+	color: #fff;
+	background-color: #01678e
+}
+
+.button.tertiary[disabled] {
+	background-color: #a7d1e0
+}
+
+.button.danger {
+	color: #fff;
+	background-color: #bc2031
+}
+
+.button.danger:hover {
+	color: #fff;
+	background-color: #71131d
+}
+
+.button.danger[disabled] {
+	background-color: #c9acaf
+}
+
+.alert-warning {
+	color: #916302;
+	background-color: #fffdf9
+}
+
+.alert-link {
+	color: #1d74f5
+}
+
+.alert-link:hover {
+	color: #095cd6
+}
+
+label.required::after {
+	color: #bc2031
+}
+
+.main-content .loading-animation>.bounce,
+.flex-tab .loading-animation>.bounce {
+	background-color: #444
+}
+
+.loading-animation.loading-animation--primary>.bounce {
+	background-color: #444
+}
+
+@-webkit-keyframes blink {
+	from {
+		color: #02acec
+	}
+	to {
+		opacity: inherit
+	}
+}
+
+@keyframes blink {
+	from {
+		color: #02acec
+	}
+	to {
+		opacity: inherit
+	}
+}
+
+.range-slider-range::-webkit-slider-thumb {
+	background-color: #04436a
+}
+
+.range-slider-range::-webkit-slider-thumb:hover {
+	background-color: #00b300
+}
+
+.range-slider-range:active::-webkit-slider-thumb {
+	background-color: #1aff1a
+}
+
+.range-slider-range::-moz-range-thumb {
+	background-color: #04436a
+}
+
+.range-slider-range::-moz-range-thumb:hover {
+	background-color: #00b300
+}
+
+.range-slider-range:active::-moz-range-thumb {
+	background-color: #1aff1a
+}
+
+.range-slider-value {
+	color: #fff;
+	background-color: #04436a
+}
+
+.range-slider-value::after {
+	border-top-color: transparent;
+	border-right-color: #04436a;
+	border-bottom-color: transparent
+}
+
+.range-slider-range::-moz-range-track {
+	background-color: #f2f3f5
+}
+
+.announcement {
+	background-color: #04436a
+}
+
+.announcement.warning {
+	background-color: var(--rc-color-alert)
+}
+
+.announcement.error {
+	background-color: var(--rc-color-alert-message-warning)
+}
+
+/* CUSTOM CSS SECTION */
+
 .color-primary-font-color {
 	color: #dcddde;
 }
@@ -7,14 +777,14 @@
 }
 
 .message.new-day::before {
-    background-color: #2f3136;
-    border: solid 1px;
-    border-color: #202225;
-    border-radius: 8px;
+	background-color: #2f3136;
+	border: solid 1px;
+	border-color: #202225;
+	border-radius: 8px;
 }
 
 .message.new-day::after {
-    border-color: #202225;
+	border-color: #202225;
 }
 
 .first-unread .body:after {
